--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,15 @@ body {
     --dark-color: #2C2C54;
 
 }
-nav {
+nav, .view-details {
     background-color: var(--nav-color);
+}
+.view-details {
+    color: white;
+}
+.view-details:hover{
+    background-color: #3b3b70;
+    color: white;
 }
 .navbar-brand, .nav-link, .dropdown-item {
     color: var(--page-color);
@@ -19,7 +26,7 @@ nav {
     border-color: var(--page-color);
 }
 .navbar-toggler-icon {
-    background-image: url("hamburger.svg");
+    background-image: url("images/hamburger.svg");
 }
 .dropdown-menu {
     border-radius: 0;
@@ -30,6 +37,9 @@ nav {
     background-color: var(--page-color);
     flex: 1 0 auto;
 }
+main {
+    padding-top: 40px;
+}
 footer {
     background-color: var(--footer-color);
 }
@@ -39,4 +49,9 @@ footer {
 }
 .dropdown-item:hover {
     background-color: var(--nav-color);
+}
+.card-image {
+    border-top-left-radius: 0.375rem;
+    border-top-right-radius: 0.375em;
+    height: 450px;
 }
