--- a/styles.css
+++ b/styles.css
@@ -37,9 +37,7 @@ nav, .view-details {
     background-color: var(--page-color);
     flex: 1 0 auto;
 }
-main {
-    padding-top: 40px;
-}
+
 footer {
     background-color: var(--footer-color);
 }
@@ -54,4 +52,7 @@ footer {
     border-top-left-radius: 0.375rem;
     border-top-right-radius: 0.375em;
     height: 450px;
+}
+.carousel-item {
+    height: 24rem;
 }
