--- a/styles.css
+++ b/styles.css
@@ -29,14 +29,13 @@ nav, .view-details {
     background-image: url("images/hamburger.svg");
 }
 .dropdown-menu {
-    border-radius: 0;
-    border: 0;
+
 }
-#page
+/*main
 {
     background-color: var(--page-color);
     flex: 1 0 auto;
-}
+}*/
 
 footer {
     background-color: var(--footer-color);
