--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,9 @@ footer {
     border-width: 0;
     border-radius: 0;
     margin: 0;
-     background-color: var(--nav-color); 
+    background-color: var(--nav-color); 
+    box-shadow: 0 1rem 3rem rgba(0,0,0,.175)!important;
+
 }
 .dropdown-item:hover {
     background-color: var(--nav-color);
